MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/Prospect_Account__c.object-meta.xml
<CustomObject>
    <label>Prospect Account</label>
    <nameField>
        <displayFormat>PA-{00000}</displayFormat>
        <label>Prospect Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prospect Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>