MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/AccName__c.field-meta.xml
<CustomField>
    <fullName>AccName__c</fullName>
    <formula>IF( RecordTypeName__c ==&apos;Org Account&apos; , Account_Name__c , (First_Name__c + &apos; &apos; + Last_Name__c) )</formula>
    <label>AccName</label>
    <type>Text</type>
</CustomField>