MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Account_Sync_Count__c.field-meta.xml
<CustomField>
    <fullName>Account_Sync_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Account Sync Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>