MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <formula>Account__r.BillingStreet+&apos; &apos;+Account__r.BillingCountry +&apos; &apos;+ Account__r.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BillingAddress</label>
    <type>Text</type>
</CustomField>