MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Prospect Accounts</relationshipLabel>
    <relationshipName>Prospect_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>