MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/DateOfEstablishment__c.field-meta.xml
<CustomField>
    <fullName>DateOfEstablishment__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Of Establishment</label>
    <type>Date</type>
</CustomField>