MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>