MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/EID_Holder__c.field-meta.xml
<CustomField>
    <fullName>EID_Holder__c</fullName>
    <formula>IF(ISPICKVAL(UAE_Resident_Status__c, &apos;Resident&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
    <label>EID Holder</label>
    <type>Text</type>
</CustomField>