MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>If(  RecordType.Name =&apos;Individual Acc / Contact&apos;,First_Name__c + &apos; &apos;+ Middle_Name__c + &apos; &apos; +  Last_Name__c, Account_Name__c)</formula>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>