MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/IsOrgAccount__c.field-meta.xml
<CustomField>
    <fullName>IsOrgAccount__c</fullName>
    <formula>RecordTypeName__c != &apos;Contact&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsOrgAccount</label>
    <type>Checkbox</type>
</CustomField>