MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/IsPersonAccount__c.field-meta.xml
<CustomField>
    <fullName>IsPersonAccount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Person Account</label>
    <type>Checkbox</type>
</CustomField>