MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/IsTheBusinessEntityRealBeneficiary__c.field-meta.xml
<CustomField>
    <fullName>IsTheBusinessEntityRealBeneficiary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is the business entity real beneficiary?</label>
    <type>Checkbox</type>
</CustomField>