MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/JO_Deleted__c.field-meta.xml
<CustomField>
    <fullName>JO_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JO Deleted</label>
    <type>Checkbox</type>
</CustomField>