MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/LegalStructure__c.field-meta.xml
<CustomField>
    <fullName>LegalStructure__c</fullName>
    <label>Legal Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sole Private Establishment (UAE based)</fullName>
            </value>
            <value>
                <fullName>Freezone Company/ Representative Office (UAE based)</fullName>
            </value>
            <value>
                <fullName>Government/ Semi Government Company (UAE based)</fullName>
            </value>
            <value>
                <fullName>Complex Business Structure (Non UAE based)</fullName>
            </value>
            <value>
                <fullName>Foreign Company (Non UAE based)</fullName>
            </value>
            <value>
                <fullName>Offshore Company (Non UAE based)</fullName>
            </value>
            <value>
                <fullName>Non-Profit Organisation eg. Charity/ Donations Organization (UAE / Non UAE based)</fullName>
            </value>
            <value>
                <fullName>Money Value Transfer Services eg. Currency exchange</fullName>
            </value>
            <value>
                <fullName>Virtual or Digital Asset Exchange (UAE / Non UAE based)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>