MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Mailing_City_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing City Arabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>