MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Mailing_Country_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Country_Arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Mailing Country Arabic</label>
    <type>TextArea</type>
</CustomField>