MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Mailing_State__c</fullName>
    <label>Mailing State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mailing_Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>State_Picklist</valueSetName>
    </valueSet>
</CustomField>