MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/MailingAddress__c.field-meta.xml
<CustomField>
    <fullName>MailingAddress__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingAddress</label>
    <length>255</length>
    <type>Text</type>
</CustomField>