MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/MailingCountryArabic__c.field-meta.xml
<CustomField>
    <fullName>MailingCountryArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>MailingCountryArabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>