MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Middle_Name__c.field-meta.xml
<CustomField>
    <fullName>Middle_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Middle Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>