MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Nationality_arabic__c.field-meta.xml
<CustomField>
    <fullName>Nationality_arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>الجنسية</label>
    <type>TextArea</type>
</CustomField>