MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/NoOfPropertyPurchasedWithModon__c.field-meta.xml
<CustomField>
    <fullName>NoOfPropertyPurchasedWithModon__c</fullName>
    <label>No of property Purchased with Modon</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>