MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Occupation__c.field-meta.xml
<CustomField>
    <fullName>Occupation__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Occupation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>