MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/OwnershipPercentage__c.field-meta.xml
<CustomField>
    <fullName>OwnershipPercentage__c</fullName>
    <label>Ownership %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>