MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_Auth_No__c.field-meta.xml
<CustomField>
    <fullName>Parent_Auth_No__c</fullName>
    <formula>Prospect_Account__r.POA_Authorization_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Auth No</label>
    <type>Text</type>
</CustomField>