MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_Name__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name__c</fullName>
    <formula>Prospect_Account__r.Full_Name__c</formula>
    <label>Parent Name</label>
    <type>Text</type>
</CustomField>