MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_Name_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Parent_Name_Arabic__c</fullName>
    <formula>Prospect_Account__r.AccountnameArabic__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Name Arabic</label>
    <type>Text</type>
</CustomField>