MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_Place_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>Parent_Place_of_Issuance__c</fullName>
    <formula>Prospect_Account__r.POA_Place_of_Issuance__c</formula>
    <label>Parent Place of Issuance</label>
    <type>Text</type>
</CustomField>