MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_POA_Auth_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_POA_Auth_Date__c</fullName>
    <formula>Prospect_Account__r.POA_Authorization_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent POA Auth Date</label>
    <type>Date</type>
</CustomField>