MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_POA_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Parent_POA_Expiry__c</fullName>
    <formula>Prospect_Account__r.POA_Authorization_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent POA Expiry Date</label>
    <type>Date</type>
</CustomField>