MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_POA_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>Parent_POA_Issued_By__c</fullName>
    <formula>Prospect_Account__r.POA_Issued_By__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent POA Issued By</label>
    <type>Text</type>
</CustomField>