MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_Registration_Authority__c.field-meta.xml
<CustomField>
    <fullName>Parent_Registration_Authority__c</fullName>
    <formula>Prospect_Account__r.Registration_Authority__c</formula>
    <label>Parent Registration Authority</label>
    <type>Text</type>
</CustomField>