MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Parent_Trade_License__c.field-meta.xml
<CustomField>
    <fullName>Parent_Trade_License__c</fullName>
    <formula>Prospect_Account__r.UnifiedNumber__c</formula>
    <label>Parent Trade License</label>
    <type>Text</type>
</CustomField>