MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/pasport_issuance_arabic__c.field-meta.xml
<CustomField>
    <fullName>pasport_issuance_arabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>جهة إصدار الجواز</label>
    <type>TextArea</type>
</CustomField>