MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Passport_Issuance_Place__c.field-meta.xml
<CustomField>
    <fullName>Passport_Issuance_Place__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passport Issuance Place</label>
    <type>TextArea</type>
</CustomField>