MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/PassportIssuancePlaceArabic__c.field-meta.xml
<CustomField>
    <fullName>PassportIssuancePlaceArabic__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PassportIssuancePlaceArabic</label>
    <length>100</length>
    <type>Text</type>
</CustomField>