MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/PaymentMethod__c.field-meta.xml
<CustomField>
    <fullName>PaymentMethod__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic bank transfer</fullName>
            </value>
            <value>
                <fullName>Own Cheque</fullName>
            </value>
            <value>
                <fullName>Own credit card</fullName>
            </value>
            <value>
                <fullName>Debit card</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
            <value>
                <fullName>3rd Party cheque / Credit / Debit card</fullName>
            </value>
            <value>
                <fullName>Virtual Assets / Cryptocurrency</fullName>
            </value>
            <value>
                <fullName>Any other forms of payment which do not state the true payer</fullName>
            </value>
            <value>
                <fullName>Payments divided into smaller parts with short intervals in-between (structured payment)</fullName>
            </value>
            <value>
                <fullName>Cross Border Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>