MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/POA_Authorization_No__c.field-meta.xml
<CustomField>
    <fullName>POA_Authorization_No__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Authorization No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>