MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/POA_Issued_By__c.field-meta.xml
<CustomField>
    <fullName>POA_Issued_By__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Issued By</label>
    <length>50</length>
    <type>Text</type>
</CustomField>