MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/POA_Place_of_Issuance__c.field-meta.xml
<CustomField>
    <fullName>POA_Place_of_Issuance__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POA Place of Issuance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>