MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/POARegistrationAuthority__c.field-meta.xml
<CustomField>
    <fullName>POARegistrationAuthority__c</fullName>
    <formula>Account__r.POARegistrationAuthority__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>POARegistrationAuthority</label>
    <type>Text</type>
</CustomField>