MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/PostalCode__c.field-meta.xml
<CustomField>
    <fullName>PostalCode__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PostalCode</label>
    <length>30</length>
    <type>Text</type>
</CustomField>