MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/profileId__c.field-meta.xml
<CustomField>
    <fullName>profileId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Passfort Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>