MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/ProfileUpdateTime__c.field-meta.xml
<CustomField>
    <fullName>ProfileUpdateTime__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Profile Update Time</label>
    <type>DateTime</type>
</CustomField>