MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Prospect_Account__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Account</label>
    <referenceTo>Prospect_Account__c</referenceTo>
    <relationshipLabel>Prospect Accounts</relationshipLabel>
    <relationshipName>Prospect_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>