MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Registration_Authority__c.field-meta.xml
<CustomField>
    <fullName>Registration_Authority__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Registration Authority</label>
    <length>80</length>
    <type>Text</type>
</CustomField>