MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/RelationshipSubType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipSubType__c</fullName>
    <label>Relationship SubT ype</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Child</fullName>
            </value>
            <value>
                <fullName>Sibling</fullName>
            </value>
            <value>
                <fullName>Friend</fullName>
            </value>
            <value>
                <fullName>Broker</fullName>
            </value>
            <value>
                <fullName>Father</fullName>
            </value>
            <value>
                <fullName>Mother</fullName>
            </value>
            <value>
                <fullName>Spouse</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>