MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/RelationshipType__c.field-meta.xml
<CustomField>
    <fullName>RelationshipType__c</fullName>
    <label>Relationship Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Joint Owner P-P</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Joint Owner Deletion</fullName>
            </value>
            <value>
                <fullName>Joint Owner % Updation</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
                <isActive>false</isActive>
                <label>Partner</label>
            </value>
            <value>
                <fullName>Third Party</fullName>
                <isActive>false</isActive>
                <label>Third Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>