MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Service_Request__c.field-meta.xml
<CustomField>
    <fullName>Service_Request__c</fullName>
    <label>Service Request</label>
    <referenceTo>ServiceRequest__c</referenceTo>
    <relationshipLabel>Prospect Accounts</relationshipLabel>
    <relationshipName>Prospect_Accounts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>