MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/SR_Joint_Owner__c.field-meta.xml
<CustomField>
    <fullName>SR_Joint_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SR Joint Owner</label>
    <referenceTo>JointOwner__c</referenceTo>
    <relationshipLabel>Prospect Accounts</relationshipLabel>
    <relationshipName>Prospect_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>