MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/SR_Status__c.field-meta.xml
<CustomField>
    <fullName>SR_Status__c</fullName>
    <formula>Text(Service_Request__r.Status__c)</formula>
    <label>SR Status</label>
    <type>Text</type>
</CustomField>