MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mr.</fullName>
            </value>
            <value>
                <fullName>Mrs.</fullName>
            </value>
            <value>
                <fullName>Ms.</fullName>
            </value>
            <value>
                <fullName>Dr.</fullName>
            </value>
            <value>
                <fullName>Prof.</fullName>
            </value>
            <value>
                <fullName>H.H</fullName>
            </value>
            <value>
                <fullName>H.E</fullName>
            </value>
            <value>
                <fullName>Eng.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>