MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/TradeLicenseExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>TradeLicenseExpiryDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Trade License Expiry Date</label>
    <type>Date</type>
</CustomField>