MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/fields/UAEVATRegisterNumber__c.field-meta.xml
<CustomField>
    <fullName>UAEVATRegisterNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>UAE VAT Register Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>