MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>true</active>
    <label>Org Account</label>
</RecordType>