MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/recordTypes/Contact.recordType-meta.xml
<RecordType>
    <fullName>Contact</fullName>
    <active>true</active>
    <label>Individual Acc / Contact</label>
</RecordType>