MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/validationRules/Acc_or_Con_either_one.validationRule-meta.xml
<ValidationRule>
    <fullName>Acc_or_Con_either_one</fullName>
    <active>true</active>
    <description>Please either Account or Contact</description>
    <errorConditionFormula>AND(RecordType.Name == &apos;Individual Acc / Contact&apos;, Account__c ==null, Contact__c ==null)</errorConditionFormula>
    <errorMessage>Please Select Either Account or Contact. Not both</errorMessage>
</ValidationRule>