MODON MRE BPDEV/force-app/main/default/objects/Prospect_Account__c/validationRules/Account_check_on_Property_Transfer.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_check_on_Property_Transfer</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
Service_Request__r.RecordTypeName__c = &quot;Service Request Management - Property Transfer Title Deed&quot;,
Service_Request__r.RecordTypeName__c = &quot;Service Request Management - Property Transfer OffPlan&quot;
),
Account__c = Service_Request__r.AccountId__c
)</errorConditionFormula>
    <errorDisplayField>Account__c</errorDisplayField>
    <errorMessage>Cannot Select Same Account as Service Request Seller</errorMessage>
</ValidationRule>